cmake_minimum_required (VERSION 3.0)
project (gLM C CXX)

set(DEBUGBUILD 0)
#Release build by default
if (DEFINED BUILDTYPE)
    if (${BUILDTYPE} STREQUAL "release")
        message("Building a release build with -O3.")
    elseif(${BUILDTYPE} STREQUAL "debug")
        set(DEBUGBUILD 1)
        message("Building a debug build.")
    else()
        message(SEND_ERROR "Unrecognized build type. Valid values are \"release\" or \"debug\". Building a release build.")
    endif()
else()
        message("Building a release build with -O3.")
endif()

if(${DEBUGBUILD} EQUAL 1)
    SET (CMAKE_CXX_FLAGS                "-g -Wall -std=c++11")
    SET (CMAKE_CXX_FLAGS_DEBUG          "-g")
else()
    SET (CMAKE_CXX_FLAGS                "-O3 -Wall -std=c++11 -DNDEBUG")
endif()

#Add include directories
include_directories ("${PROJECT_SOURCE_DIR}/Btree")
include_directories ("${PROJECT_SOURCE_DIR}/Trie")
include_directories ("${PROJECT_SOURCE_DIR}/Parser")
include_directories ("${PROJECT_SOURCE_DIR}/misc")
include_directories ("${PROJECT_SOURCE_DIR}/gpu")
include_directories ("${PROJECT_SOURCE_DIR}/LM")

add_subdirectory (Test)
add_subdirectory (misc_testing)
add_subdirectory (bin)
add_subdirectory (gpu)
#add_subdirectory (Btree)
#add_subdirectory (Parser)
enable_testing ()
add_test (NAME AllTest COMMAND tests)
add_test (NAME gpu_test COMMAND gpu_tests_suite)
add_test (NAME gpu_test_v2 COMMAND gpu_tests_suite_v2)
add_test (NAME btree_test COMMAND btree_tests)
add_test (NAME lm_test COMMAND lm_tests)

